// Copyright (c) 2011 Nohros Inc. All rights reserved.
// Use of this source code is governed by a MIT-style license that can be
// found in the LICENSE file.
//
//

import "google/protobuf/csharp_options.proto";
option (google.protobuf.csharp_file_options).namespace = "Nohros.RestQL";

package nohros.restql;

option optimize_for = LITE_RUNTIME;

enum MessageType {
  kQueryRequestMessage = 100;
  kQueryResponseMessage = 101;
}
