// Copyright (c) 2011 Nohros Inc. All rights reserved.
// Use of this source code is governed by a MIT-style license that can be
// found in the LICENSE file.
//

import "google/protobuf/csharp_options.proto";
option (google.protobuf.csharp_file_options).namespace = "Nohros.Toolkit.RestQL";

import "restql/common.proto";

package nohros.toolkit.restql;

option optimize_for = LITE_RUNTIME;

message QueryOptionsProto {
  // A string that uniquely identifies the options within an
  // collection of ooptions.
  optional string name = 1;
  
  // The value associated with the option.
  optional string value = 2;
}

message QueryRequestMessage {
  // The name of the query associated with the request.
  optional string name = 1;
  
  // The query options(filters, parameters, etc).
  repeated QueryOptionsProto options = 2;
}

message QueryResponseMessage {
  // The name of the query associated with the request that
  // originated this response.
  optional string name = 1;
  
  // The response returned by the query processor.
  optional string response = 2;
}

